services/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.2-0
          args: ["start", "--hostname", "keycloak.kamuridesu.com", "--proxy-headers", "xforwarded", "--http-enabled", "true", "hostname-strict", "false"]
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          resources:
            limits:
              memory: 1G
              cpu: '0.5'
